// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderScanReport — golden snapshot > matches the snapshot for the 5-finding fixture 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1" />
  <meta name="generator" content="ariada/scan-report-html v0.1.0" />
  <title>Accessibility scan — example.org — 2026-05-19T16:05:52.101Z</title>
  <style>:root {
  --surface: #ffffff;
  --surface-2: #f5f7fa;
  --surface-3: #e7ecf2;
  --ink: #18222e;
  --ink-muted: #4a5a6c;
  --link: #0046aa;
  --link-visited: #5a268d;
  --border: #cad3dc;
  --shadow: 0 1px 2px rgba(24, 34, 46, 0.08), 0 4px 12px rgba(24, 34, 46, 0.05);
  --sev-critical: #8a1118;
  --sev-critical-fg: #ffffff;
  --sev-serious: #8a4a00;
  --sev-serious-fg: #ffffff;
  --sev-moderate: #d39a00;
  --sev-moderate-fg: #18222e;
  --sev-minor: #225b6f;
  --sev-minor-fg: #ffffff;
  --band-compliant: #1e6b2f;
  --band-wip: #8a4a00;
  --band-noncompliant: #8a1118;
  --radius: 8px;
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 12px;
  --space-4: 16px;
  --space-5: 24px;
  --space-6: 32px;
  --space-7: 48px;
  --font-sys: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
  --font-mono: ui-monospace, SFMono-Regular, 'SF Mono', Menlo, Consolas, monospace;
}

*, *::before, *::after { box-sizing: border-box; }

html { font-family: var(--font-sys); line-height: 1.5; color: var(--ink); background: var(--surface-2); }
body { margin: 0; padding: 0; }

main { display: block; max-width: 960px; margin: 0 auto; padding: var(--space-6) var(--space-5); }

a { color: var(--link); text-decoration: underline; text-underline-offset: 0.2em; }
a:visited { color: var(--link-visited); }
a:hover { text-decoration-thickness: 2px; }
a:focus-visible, button:focus-visible, summary:focus-visible {
  outline: 3px solid var(--link);
  outline-offset: 2px;
  border-radius: 2px;
}

h1, h2, h3 { font-weight: 600; line-height: 1.25; color: var(--ink); }
h1 { font-size: 1.75rem; margin: 0 0 var(--space-3); }
h2 { font-size: 1.375rem; margin: var(--space-6) 0 var(--space-3); }
h3 { font-size: 1.125rem; margin: 0 0 var(--space-2); }

p { margin: 0 0 var(--space-3); }

/* Skip link */
.skip-link {
  position: absolute;
  top: -100px;
  left: var(--space-2);
  background: var(--ink);
  color: var(--surface);
  padding: var(--space-2) var(--space-3);
  z-index: 100;
  text-decoration: none;
}
.skip-link:focus { top: var(--space-2); }

/* Visually hidden — keep accessible to AT */
.visually-hidden {
  position: absolute !important;
  width: 1px; height: 1px;
  padding: 0; margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

/* Header */
.report-header {
  background: var(--surface);
  border: 1px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  margin-bottom: var(--space-5);
  box-shadow: var(--shadow);
}
.report-eyebrow {
  font-size: 0.875rem;
  color: var(--ink-muted);
  text-transform: uppercase;
  letter-spacing: 0.08em;
  margin: 0 0 var(--space-2);
}
.report-title { margin-bottom: var(--space-4); word-break: break-word; }
.report-meta { display: grid; gap: var(--space-2); margin: 0; }
.report-meta__row { display: flex; flex-wrap: wrap; gap: var(--space-2); }
.report-meta__row dt { font-weight: 600; min-width: 7rem; }
.report-meta__row dd { margin: 0; color: var(--ink-muted); }
.report-meta__row code { font-family: var(--font-mono); font-size: 0.9rem; word-break: break-all; }

/* Summary */
.summary {
  background: var(--surface);
  border: 1px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  margin-bottom: var(--space-5);
  box-shadow: var(--shadow);
}
.summary h2 { margin-top: 0; }
.summary__grid {
  display: grid;
  gap: var(--space-5);
  grid-template-columns: minmax(220px, 1fr) 2fr;
}
.summary__score { text-align: center; padding: var(--space-3); }
.summary__score-label {
  font-size: 0.875rem;
  color: var(--ink-muted);
  margin: 0 0 var(--space-2);
}
.summary__score-value {
  font-size: 3.5rem;
  font-weight: 700;
  line-height: 1;
  margin: 0;
}
.summary__score-value--compliant { color: var(--band-compliant); }
.summary__score-value--work-in-progress { color: var(--band-wip); }
.summary__score-value--non-compliant { color: var(--band-noncompliant); }
.summary__score-unit { font-size: 1.5rem; color: var(--ink-muted); margin-left: 0.1em; }
.summary__score-band { font-size: 1rem; margin: var(--space-2) 0 var(--space-2); font-weight: 600; }
.summary__score-caveat { font-size: 0.75rem; color: var(--ink-muted); margin: 0; }
.summary__breakdown-label { font-weight: 600; margin: 0 0 var(--space-3); }
.bar { display: grid; grid-template-columns: 6rem 1fr 3rem; align-items: center; gap: var(--space-2); margin-bottom: var(--space-2); }
.bar__label { font-size: 0.875rem; }
.bar__track { background: var(--surface-3); height: 0.75rem; border-radius: 4px; overflow: hidden; }
.bar__fill { height: 100%; border-radius: 4px; }
.bar__fill--critical { background: var(--sev-critical); }
.bar__fill--serious { background: var(--sev-serious); }
.bar__fill--moderate { background: var(--sev-moderate); }
.bar__fill--minor { background: var(--sev-minor); }
.bar__count { font-variant-numeric: tabular-nums; font-weight: 600; text-align: right; }

@media (max-width: 768px) {
  .summary__grid { grid-template-columns: 1fr; }
}

/* Violation cards */
.violations { margin-bottom: var(--space-5); }
.card {
  background: var(--surface);
  border: 1px solid var(--border);
  border-left: 4px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  margin-bottom: var(--space-4);
  box-shadow: var(--shadow);
  page-break-inside: avoid;
}
.card--critical { border-left-color: var(--sev-critical); }
.card--serious { border-left-color: var(--sev-serious); }
.card--moderate { border-left-color: var(--sev-moderate); }
.card--minor { border-left-color: var(--sev-minor); }
.card__header { display: flex; flex-wrap: wrap; gap: var(--space-3); align-items: center; margin-bottom: var(--space-3); }
.card__badge {
  display: inline-flex;
  align-items: center;
  gap: var(--space-1);
  padding: var(--space-1) var(--space-3);
  border-radius: 999px;
  font-size: 0.8125rem;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.04em;
}
.card__badge--critical { background: var(--sev-critical); color: var(--sev-critical-fg); }
.card__badge--serious { background: var(--sev-serious); color: var(--sev-serious-fg); }
.card__badge--moderate { background: var(--sev-moderate); color: var(--sev-moderate-fg); }
.card__badge--minor { background: var(--sev-minor); color: var(--sev-minor-fg); }
.card__ruleid { font-family: var(--font-mono); font-size: 0.875rem; color: var(--ink-muted); }
.card__wcag { font-size: 0.875rem; margin-left: auto; }
.card__title { margin-top: 0; }
.card__help { color: var(--ink-muted); margin-bottom: var(--space-3); }
.card__affected { font-size: 0.875rem; color: var(--ink-muted); margin-bottom: var(--space-3); }
.card__screenshot { margin: 0 0 var(--space-3); border: 1px solid var(--border); border-radius: 4px; overflow: hidden; background: var(--surface-2); }
.card__screenshot img { display: block; max-width: 100%; height: auto; }
.card__screenshot--missing { font-size: 0.875rem; color: var(--ink-muted); font-style: italic; padding: var(--space-3); background: var(--surface-2); border-radius: 4px; }
.card__field { margin-bottom: var(--space-3); }
.card__field-label { font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.08em; color: var(--ink-muted); margin: 0 0 var(--space-1); }
.card__field-value { margin: 0; }
.card__field-value--code {
  font-family: var(--font-mono);
  font-size: 0.875rem;
  background: var(--surface-2);
  border: 1px solid var(--border);
  border-radius: 4px;
  padding: var(--space-2) var(--space-3);
  white-space: pre-wrap;
  word-break: break-all;
  display: block;
}
.card__helpurl { font-size: 0.875rem; color: var(--ink-muted); }
.card__helpurl a { word-break: break-all; }

/* Action items */
.action-items {
  background: var(--surface);
  border: 1px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  margin-bottom: var(--space-5);
  box-shadow: var(--shadow);
}
.action-items__list { padding-left: var(--space-5); margin: 0; }
.action-items__item { margin-bottom: var(--space-2); }
.action-items__link { display: inline-flex; flex-wrap: wrap; align-items: center; gap: var(--space-2); }
.action-items__badge {
  display: inline-block;
  padding: 2px var(--space-2);
  border-radius: 4px;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.04em;
}
.action-items__badge--critical { background: var(--sev-critical); color: var(--sev-critical-fg); }
.action-items__badge--serious { background: var(--sev-serious); color: var(--sev-serious-fg); }
.action-items__badge--moderate { background: var(--sev-moderate); color: var(--sev-moderate-fg); }
.action-items__badge--minor { background: var(--sev-minor); color: var(--sev-minor-fg); }

/* Footer */
.report-footer {
  background: var(--surface);
  border: 1px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  margin-top: var(--space-5);
  box-shadow: var(--shadow);
}
.report-footer__heading { margin-top: 0; font-size: 1.125rem; }
.report-footer__meta { display: grid; gap: var(--space-2); margin: 0 0 var(--space-4); }
.report-footer__row { display: flex; gap: var(--space-3); }
.report-footer__row dt { font-weight: 600; min-width: 8rem; }
.report-footer__row dd { margin: 0; color: var(--ink-muted); }
.report-footer__identity { font-size: 0.8125rem; color: var(--ink-muted); margin: 0; padding-top: var(--space-3); border-top: 1px solid var(--border); }

/* Empty-state */
.empty-state {
  background: var(--surface);
  border: 1px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  text-align: center;
  margin-bottom: var(--space-5);
}
.empty-state__icon { font-size: 2.5rem; margin-bottom: var(--space-2); }

/* Print */
@media print {
  html, body { background: #ffffff; }
  main { max-width: none; padding: 0; }
  .skip-link { display: none; }
  .card, .report-header, .summary, .action-items, .report-footer { box-shadow: none; border-color: #000000; }
  details[open] > summary, details > * { display: block !important; }
  a { text-decoration: underline; color: #000000; }
}

/* Mobile */
@media (max-width: 480px) {
  main { padding: var(--space-4) var(--space-3); }
  h1 { font-size: 1.5rem; }
  h2 { font-size: 1.25rem; }
  .summary__score-value { font-size: 2.5rem; }
  .bar { grid-template-columns: 4.5rem 1fr 2rem; }
  .card__wcag { margin-left: 0; }
}
</style>
</head>
<body>
  <a class="skip-link" href="#main">Skip to main content</a>
  <main id="main">
    <header class="report-header" role="banner">
  <p class="report-eyebrow">Accessibility scan report</p>
  <h1 class="report-title">example.org</h1>
  <dl class="report-meta">
    <div class="report-meta__row">
      <dt>URL</dt>
      <dd><code>https://example.org/checkout</code></dd>
    </div>
    <div class="report-meta__row">
      <dt>Scanned</dt>
      <dd><time datetime="2026-05-19T16:05:52.101Z">2026-05-19T16:05:52.101Z</time></dd>
    </div>
    <div class="report-meta__row">
      <dt>Scanner</dt>
      <dd>ariada v0.1.0</dd>
    </div>
  </dl>
</header>
    <section class="summary" aria-labelledby="summary-heading">
  <h2 id="summary-heading">Summary</h2>
  <div class="summary__grid">
    <div class="summary__score" role="group" aria-labelledby="score-label">
      <p id="score-label" class="summary__score-label">Compliance score (heuristic)</p>
      <p class="summary__score-value summary__score-value--non-compliant" aria-live="polite">
        <span class="summary__score-number">62</span><span class="summary__score-unit">/100</span>
      </p>
      <p class="summary__score-band">Non-compliant</p>
      <p class="summary__score-caveat">Heuristic compliance indicator — see Module D for canonical signed score.</p>
    </div>
    <div class="summary__breakdown" role="group" aria-labelledby="breakdown-label">
      <p id="breakdown-label" class="summary__breakdown-label">Severity breakdown (5 findings)</p>
      <div class="bar bar--critical">
        <span class="bar__label">Critical</span>
        <div class="bar__track" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="5" aria-label="Critical: 2 of 5">
          <div class="bar__fill bar__fill--critical" style="width: 40%"></div>
        </div>
        <span class="bar__count">2</span>
      </div>
      <div class="bar bar--serious">
        <span class="bar__label">Serious</span>
        <div class="bar__track" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="5" aria-label="Serious: 1 of 5">
          <div class="bar__fill bar__fill--serious" style="width: 20%"></div>
        </div>
        <span class="bar__count">1</span>
      </div>
      <div class="bar bar--moderate">
        <span class="bar__label">Moderate</span>
        <div class="bar__track" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="5" aria-label="Moderate: 1 of 5">
          <div class="bar__fill bar__fill--moderate" style="width: 20%"></div>
        </div>
        <span class="bar__count">1</span>
      </div>
      <div class="bar bar--minor">
        <span class="bar__label">Minor</span>
        <div class="bar__track" role="progressbar" aria-valuenow="1" aria-valuemin="0" aria-valuemax="5" aria-label="Minor: 1 of 5">
          <div class="bar__fill bar__fill--minor" style="width: 20%"></div>
        </div>
        <span class="bar__count">1</span>
      </div>
    </div>
  </div>
</section>
    
    <section class="violations" aria-labelledby="violations-heading">
  <h2 id="violations-heading">Findings</h2>
  <article class="card card--critical" id="finding-1-image-alt" aria-labelledby="finding-1-image-alt-title">
  <header class="card__header">
    <span class="card__badge card__badge--critical" aria-label="Severity: Critical">
      <span class="card__badge-icon" aria-hidden="true">●</span>
      <span class="card__badge-text">Critical</span>
    </span>
    <code class="card__ruleid">image-alt</code>
    <a class="card__wcag" href="https://www.w3.org/WAI/WCAG22/Understanding/non-text-content.html" target="_blank" rel="noopener noreferrer">WCAG SC 1.1.1<span aria-hidden="true"> ↗</span><span class="visually-hidden"> (opens in new tab)</span></a>
  </header>
  <h3 class="card__title" id="finding-1-image-alt-title">Ensures &lt;img&gt; elements have alternate text or a role of none or presentation</h3>
  <p class="card__help">Images must have alternate text</p>
  <p class="card__affected">2 elements affected</p>
  <p class="card__screenshot card__screenshot--missing">(no preview available)</p>
  <div class="card__field">
        <p class="card__field-label">Selector</p>
        <code class="card__field-value card__field-value--code">main &gt; section.hero &gt; img</code>
      </div>
  <div class="card__field">
        <p class="card__field-label">HTML snippet</p>
        <pre class="card__field-value card__field-value--code"><code>&lt;img src=&quot;/hero.jpg&quot; width=&quot;1200&quot; height=&quot;400&quot;&gt;</code></pre>
      </div>
  <p class="card__helpurl">
        Read the full rule:
        <a href="https://dequeuniversity.com/rules/axe/4.10/image-alt" target="_blank" rel="noopener noreferrer">https://dequeuniversity.com/rules/axe/4.10/image-alt<span aria-hidden="true"> ↗</span><span class="visually-hidden"> (opens in new tab)</span></a>
      </p>
</article>
  <article class="card card--critical" id="finding-2-label" aria-labelledby="finding-2-label-title">
  <header class="card__header">
    <span class="card__badge card__badge--critical" aria-label="Severity: Critical">
      <span class="card__badge-icon" aria-hidden="true">●</span>
      <span class="card__badge-text">Critical</span>
    </span>
    <code class="card__ruleid">label</code>
    <a class="card__wcag" href="https://www.w3.org/WAI/WCAG22/Understanding/info-and-relationships.html" target="_blank" rel="noopener noreferrer">WCAG SC 1.3.1<span aria-hidden="true"> ↗</span><span class="visually-hidden"> (opens in new tab)</span></a>
  </header>
  <h3 class="card__title" id="finding-2-label-title">Ensures every form element has a label</h3>
  <p class="card__help">Form elements must have labels</p>
  <p class="card__affected">1 element affected</p>
  <p class="card__screenshot card__screenshot--missing">(no preview available)</p>
  <div class="card__field">
        <p class="card__field-label">Selector</p>
        <code class="card__field-value card__field-value--code">form#checkout &gt; input[name=&quot;zip&quot;]</code>
      </div>
  <div class="card__field">
        <p class="card__field-label">HTML snippet</p>
        <pre class="card__field-value card__field-value--code"><code>&lt;input type=&quot;text&quot; name=&quot;zip&quot; placeholder=&quot;Postal code&quot;&gt;</code></pre>
      </div>
  <p class="card__helpurl">
        Read the full rule:
        <a href="https://dequeuniversity.com/rules/axe/4.10/label" target="_blank" rel="noopener noreferrer">https://dequeuniversity.com/rules/axe/4.10/label<span aria-hidden="true"> ↗</span><span class="visually-hidden"> (opens in new tab)</span></a>
      </p>
</article>
  <article class="card card--serious" id="finding-3-color-contrast" aria-labelledby="finding-3-color-contrast-title">
  <header class="card__header">
    <span class="card__badge card__badge--serious" aria-label="Severity: Serious">
      <span class="card__badge-icon" aria-hidden="true">▼</span>
      <span class="card__badge-text">Serious</span>
    </span>
    <code class="card__ruleid">color-contrast</code>
    <a class="card__wcag" href="https://www.w3.org/WAI/WCAG22/Understanding/contrast-minimum.html" target="_blank" rel="noopener noreferrer">WCAG SC 1.4.3<span aria-hidden="true"> ↗</span><span class="visually-hidden"> (opens in new tab)</span></a>
  </header>
  <h3 class="card__title" id="finding-3-color-contrast-title">Ensure the contrast between foreground and background colors meets WCAG 2 AA minimum contrast ratio thresholds</h3>
  <p class="card__help">Elements must meet minimum color contrast ratio thresholds</p>
  <p class="card__affected">1 element affected</p>
  <p class="card__screenshot card__screenshot--missing">(no preview available)</p>
  <div class="card__field">
        <p class="card__field-label">Selector</p>
        <code class="card__field-value card__field-value--code">header &gt; nav &gt; a:nth-child(2)</code>
      </div>
  <div class="card__field">
        <p class="card__field-label">HTML snippet</p>
        <pre class="card__field-value card__field-value--code"><code>&lt;a href=&quot;/about&quot; class=&quot;nav__link&quot;&gt;About us&lt;/a&gt;</code></pre>
      </div>
  <p class="card__helpurl">
        Read the full rule:
        <a href="https://dequeuniversity.com/rules/axe/4.10/color-contrast" target="_blank" rel="noopener noreferrer">https://dequeuniversity.com/rules/axe/4.10/color-contrast<span aria-hidden="true"> ↗</span><span class="visually-hidden"> (opens in new tab)</span></a>
      </p>
</article>
  <article class="card card--moderate" id="finding-4-region" aria-labelledby="finding-4-region-title">
  <header class="card__header">
    <span class="card__badge card__badge--moderate" aria-label="Severity: Moderate">
      <span class="card__badge-icon" aria-hidden="true">▲</span>
      <span class="card__badge-text">Moderate</span>
    </span>
    <code class="card__ruleid">region</code>
    <a class="card__wcag" href="https://www.w3.org/WAI/WCAG22/Understanding/info-and-relationships.html" target="_blank" rel="noopener noreferrer">WCAG SC 1.3.1<span aria-hidden="true"> ↗</span><span class="visually-hidden"> (opens in new tab)</span></a>
  </header>
  <h3 class="card__title" id="finding-4-region-title">Ensures all page content is contained by landmarks</h3>
  <p class="card__help">All page content should be contained by landmarks</p>
  <p class="card__affected">1 element affected</p>
  <p class="card__screenshot card__screenshot--missing">(no preview available)</p>
  <div class="card__field">
        <p class="card__field-label">Selector</p>
        <code class="card__field-value card__field-value--code">div.banner</code>
      </div>
  <div class="card__field">
        <p class="card__field-label">HTML snippet</p>
        <pre class="card__field-value card__field-value--code"><code>&lt;div class=&quot;banner&quot;&gt;Free shipping over 500 kr&lt;/div&gt;</code></pre>
      </div>
  <p class="card__helpurl">
        Read the full rule:
        <a href="https://dequeuniversity.com/rules/axe/4.10/region" target="_blank" rel="noopener noreferrer">https://dequeuniversity.com/rules/axe/4.10/region<span aria-hidden="true"> ↗</span><span class="visually-hidden"> (opens in new tab)</span></a>
      </p>
</article>
  <article class="card card--minor" id="finding-5-landmark-unique" aria-labelledby="finding-5-landmark-unique-title">
  <header class="card__header">
    <span class="card__badge card__badge--minor" aria-label="Severity: Minor">
      <span class="card__badge-icon" aria-hidden="true">○</span>
      <span class="card__badge-text">Minor</span>
    </span>
    <code class="card__ruleid">landmark-unique</code>
    <a class="card__wcag" href="https://www.w3.org/WAI/WCAG22/Understanding/info-and-relationships.html" target="_blank" rel="noopener noreferrer">WCAG SC 1.3.1<span aria-hidden="true"> ↗</span><span class="visually-hidden"> (opens in new tab)</span></a>
  </header>
  <h3 class="card__title" id="finding-5-landmark-unique-title">Ensures landmarks are unique</h3>
  <p class="card__help">Landmarks should have a unique role or role/label/title combination</p>
  <p class="card__affected">1 element affected</p>
  <p class="card__screenshot card__screenshot--missing">(no preview available)</p>
  <div class="card__field">
        <p class="card__field-label">Selector</p>
        <code class="card__field-value card__field-value--code">aside.sidebar:nth-of-type(2)</code>
      </div>
  <div class="card__field">
        <p class="card__field-label">HTML snippet</p>
        <pre class="card__field-value card__field-value--code"><code>&lt;aside class=&quot;sidebar&quot;&gt;Newsletter signup&lt;/aside&gt;</code></pre>
      </div>
  <p class="card__helpurl">
        Read the full rule:
        <a href="https://dequeuniversity.com/rules/axe/4.10/landmark-unique" target="_blank" rel="noopener noreferrer">https://dequeuniversity.com/rules/axe/4.10/landmark-unique<span aria-hidden="true"> ↗</span><span class="visually-hidden"> (opens in new tab)</span></a>
      </p>
</article>
</section>
    <section class="action-items" aria-labelledby="action-items-heading">
  <h2 id="action-items-heading">Top 5 action items</h2>
  <ol class="action-items__list">
    <li class="action-items__item">
      <a href="#finding-1-image-alt" class="action-items__link">
        <span class="action-items__badge action-items__badge--critical" aria-label="Severity: Critical">Critical</span>
        <span class="action-items__text">Fix 2 instances of <em>Ensures &lt;img&gt; elements have alternate text or a role of none or presentation</em></span>
      </a>
    </li>
    <li class="action-items__item">
      <a href="#finding-2-label" class="action-items__link">
        <span class="action-items__badge action-items__badge--critical" aria-label="Severity: Critical">Critical</span>
        <span class="action-items__text">Fix 1 instance of <em>Ensures every form element has a label</em></span>
      </a>
    </li>
    <li class="action-items__item">
      <a href="#finding-3-color-contrast" class="action-items__link">
        <span class="action-items__badge action-items__badge--serious" aria-label="Severity: Serious">Serious</span>
        <span class="action-items__text">Fix 1 instance of <em>Ensure the contrast between foreground and background colors meets WCAG 2 AA minimum contrast ratio thresholds</em></span>
      </a>
    </li>
    <li class="action-items__item">
      <a href="#finding-4-region" class="action-items__link">
        <span class="action-items__badge action-items__badge--moderate" aria-label="Severity: Moderate">Moderate</span>
        <span class="action-items__text">Fix 1 instance of <em>Ensures all page content is contained by landmarks</em></span>
      </a>
    </li>
    <li class="action-items__item">
      <a href="#finding-5-landmark-unique" class="action-items__link">
        <span class="action-items__badge action-items__badge--minor" aria-label="Severity: Minor">Minor</span>
        <span class="action-items__text">Fix 1 instance of <em>Ensures landmarks are unique</em></span>
      </a>
    </li>
  </ol>
</section>
    <footer class="report-footer" role="contentinfo">
  <div data-cert-block></div>
  <h2 class="report-footer__heading">Methodology</h2>
  <dl class="report-footer__meta">
    <div class="report-footer__row">
      <dt>Scanner</dt>
      <dd>ariada v0.1.0</dd>
    </div>
    <div class="report-footer__row">
      <dt>axe-core</dt>
      <dd>4.10.2</dd>
    </div>
    <div class="report-footer__row">
      <dt>WCAG</dt>
      <dd>2.2 Level AA</dd>
    </div>
    <div class="report-footer__row">
      <dt>EN 301 549</dt>
      <dd>v3.2.1</dd>
    </div>
    <div class="report-footer__row">
      <dt>Browser</dt>
      <dd>Chromium/124.0.6367.91</dd>
    </div>
    <div class="report-footer__row">
      <dt>Viewport</dt>
      <dd>1280x720</dd>
    </div>
  </dl>
  <p class="report-footer__identity">Maintained by Alekszandr Bricskin (Agonist Development AB, Sweden, org.nr 559452-5726). License: EUPL-1.2.</p>
</footer>
  </main>
</body>
</html>
"
`;

exports[`renderScanReport — golden snapshot > matches the snapshot for the empty-input fixture 1`] = `
"<!doctype html>
<html lang="en">
<head>
  <meta charset="utf-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1" />
  <meta name="generator" content="ariada/scan-report-html v0.1.0" />
  <title>Accessibility scan — example.org — 2026-05-19T16:05:52.101Z</title>
  <style>:root {
  --surface: #ffffff;
  --surface-2: #f5f7fa;
  --surface-3: #e7ecf2;
  --ink: #18222e;
  --ink-muted: #4a5a6c;
  --link: #0046aa;
  --link-visited: #5a268d;
  --border: #cad3dc;
  --shadow: 0 1px 2px rgba(24, 34, 46, 0.08), 0 4px 12px rgba(24, 34, 46, 0.05);
  --sev-critical: #8a1118;
  --sev-critical-fg: #ffffff;
  --sev-serious: #8a4a00;
  --sev-serious-fg: #ffffff;
  --sev-moderate: #d39a00;
  --sev-moderate-fg: #18222e;
  --sev-minor: #225b6f;
  --sev-minor-fg: #ffffff;
  --band-compliant: #1e6b2f;
  --band-wip: #8a4a00;
  --band-noncompliant: #8a1118;
  --radius: 8px;
  --space-1: 4px;
  --space-2: 8px;
  --space-3: 12px;
  --space-4: 16px;
  --space-5: 24px;
  --space-6: 32px;
  --space-7: 48px;
  --font-sys: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
  --font-mono: ui-monospace, SFMono-Regular, 'SF Mono', Menlo, Consolas, monospace;
}

*, *::before, *::after { box-sizing: border-box; }

html { font-family: var(--font-sys); line-height: 1.5; color: var(--ink); background: var(--surface-2); }
body { margin: 0; padding: 0; }

main { display: block; max-width: 960px; margin: 0 auto; padding: var(--space-6) var(--space-5); }

a { color: var(--link); text-decoration: underline; text-underline-offset: 0.2em; }
a:visited { color: var(--link-visited); }
a:hover { text-decoration-thickness: 2px; }
a:focus-visible, button:focus-visible, summary:focus-visible {
  outline: 3px solid var(--link);
  outline-offset: 2px;
  border-radius: 2px;
}

h1, h2, h3 { font-weight: 600; line-height: 1.25; color: var(--ink); }
h1 { font-size: 1.75rem; margin: 0 0 var(--space-3); }
h2 { font-size: 1.375rem; margin: var(--space-6) 0 var(--space-3); }
h3 { font-size: 1.125rem; margin: 0 0 var(--space-2); }

p { margin: 0 0 var(--space-3); }

/* Skip link */
.skip-link {
  position: absolute;
  top: -100px;
  left: var(--space-2);
  background: var(--ink);
  color: var(--surface);
  padding: var(--space-2) var(--space-3);
  z-index: 100;
  text-decoration: none;
}
.skip-link:focus { top: var(--space-2); }

/* Visually hidden — keep accessible to AT */
.visually-hidden {
  position: absolute !important;
  width: 1px; height: 1px;
  padding: 0; margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  border: 0;
}

/* Header */
.report-header {
  background: var(--surface);
  border: 1px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  margin-bottom: var(--space-5);
  box-shadow: var(--shadow);
}
.report-eyebrow {
  font-size: 0.875rem;
  color: var(--ink-muted);
  text-transform: uppercase;
  letter-spacing: 0.08em;
  margin: 0 0 var(--space-2);
}
.report-title { margin-bottom: var(--space-4); word-break: break-word; }
.report-meta { display: grid; gap: var(--space-2); margin: 0; }
.report-meta__row { display: flex; flex-wrap: wrap; gap: var(--space-2); }
.report-meta__row dt { font-weight: 600; min-width: 7rem; }
.report-meta__row dd { margin: 0; color: var(--ink-muted); }
.report-meta__row code { font-family: var(--font-mono); font-size: 0.9rem; word-break: break-all; }

/* Summary */
.summary {
  background: var(--surface);
  border: 1px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  margin-bottom: var(--space-5);
  box-shadow: var(--shadow);
}
.summary h2 { margin-top: 0; }
.summary__grid {
  display: grid;
  gap: var(--space-5);
  grid-template-columns: minmax(220px, 1fr) 2fr;
}
.summary__score { text-align: center; padding: var(--space-3); }
.summary__score-label {
  font-size: 0.875rem;
  color: var(--ink-muted);
  margin: 0 0 var(--space-2);
}
.summary__score-value {
  font-size: 3.5rem;
  font-weight: 700;
  line-height: 1;
  margin: 0;
}
.summary__score-value--compliant { color: var(--band-compliant); }
.summary__score-value--work-in-progress { color: var(--band-wip); }
.summary__score-value--non-compliant { color: var(--band-noncompliant); }
.summary__score-unit { font-size: 1.5rem; color: var(--ink-muted); margin-left: 0.1em; }
.summary__score-band { font-size: 1rem; margin: var(--space-2) 0 var(--space-2); font-weight: 600; }
.summary__score-caveat { font-size: 0.75rem; color: var(--ink-muted); margin: 0; }
.summary__breakdown-label { font-weight: 600; margin: 0 0 var(--space-3); }
.bar { display: grid; grid-template-columns: 6rem 1fr 3rem; align-items: center; gap: var(--space-2); margin-bottom: var(--space-2); }
.bar__label { font-size: 0.875rem; }
.bar__track { background: var(--surface-3); height: 0.75rem; border-radius: 4px; overflow: hidden; }
.bar__fill { height: 100%; border-radius: 4px; }
.bar__fill--critical { background: var(--sev-critical); }
.bar__fill--serious { background: var(--sev-serious); }
.bar__fill--moderate { background: var(--sev-moderate); }
.bar__fill--minor { background: var(--sev-minor); }
.bar__count { font-variant-numeric: tabular-nums; font-weight: 600; text-align: right; }

@media (max-width: 768px) {
  .summary__grid { grid-template-columns: 1fr; }
}

/* Violation cards */
.violations { margin-bottom: var(--space-5); }
.card {
  background: var(--surface);
  border: 1px solid var(--border);
  border-left: 4px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  margin-bottom: var(--space-4);
  box-shadow: var(--shadow);
  page-break-inside: avoid;
}
.card--critical { border-left-color: var(--sev-critical); }
.card--serious { border-left-color: var(--sev-serious); }
.card--moderate { border-left-color: var(--sev-moderate); }
.card--minor { border-left-color: var(--sev-minor); }
.card__header { display: flex; flex-wrap: wrap; gap: var(--space-3); align-items: center; margin-bottom: var(--space-3); }
.card__badge {
  display: inline-flex;
  align-items: center;
  gap: var(--space-1);
  padding: var(--space-1) var(--space-3);
  border-radius: 999px;
  font-size: 0.8125rem;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.04em;
}
.card__badge--critical { background: var(--sev-critical); color: var(--sev-critical-fg); }
.card__badge--serious { background: var(--sev-serious); color: var(--sev-serious-fg); }
.card__badge--moderate { background: var(--sev-moderate); color: var(--sev-moderate-fg); }
.card__badge--minor { background: var(--sev-minor); color: var(--sev-minor-fg); }
.card__ruleid { font-family: var(--font-mono); font-size: 0.875rem; color: var(--ink-muted); }
.card__wcag { font-size: 0.875rem; margin-left: auto; }
.card__title { margin-top: 0; }
.card__help { color: var(--ink-muted); margin-bottom: var(--space-3); }
.card__affected { font-size: 0.875rem; color: var(--ink-muted); margin-bottom: var(--space-3); }
.card__screenshot { margin: 0 0 var(--space-3); border: 1px solid var(--border); border-radius: 4px; overflow: hidden; background: var(--surface-2); }
.card__screenshot img { display: block; max-width: 100%; height: auto; }
.card__screenshot--missing { font-size: 0.875rem; color: var(--ink-muted); font-style: italic; padding: var(--space-3); background: var(--surface-2); border-radius: 4px; }
.card__field { margin-bottom: var(--space-3); }
.card__field-label { font-size: 0.75rem; font-weight: 700; text-transform: uppercase; letter-spacing: 0.08em; color: var(--ink-muted); margin: 0 0 var(--space-1); }
.card__field-value { margin: 0; }
.card__field-value--code {
  font-family: var(--font-mono);
  font-size: 0.875rem;
  background: var(--surface-2);
  border: 1px solid var(--border);
  border-radius: 4px;
  padding: var(--space-2) var(--space-3);
  white-space: pre-wrap;
  word-break: break-all;
  display: block;
}
.card__helpurl { font-size: 0.875rem; color: var(--ink-muted); }
.card__helpurl a { word-break: break-all; }

/* Action items */
.action-items {
  background: var(--surface);
  border: 1px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  margin-bottom: var(--space-5);
  box-shadow: var(--shadow);
}
.action-items__list { padding-left: var(--space-5); margin: 0; }
.action-items__item { margin-bottom: var(--space-2); }
.action-items__link { display: inline-flex; flex-wrap: wrap; align-items: center; gap: var(--space-2); }
.action-items__badge {
  display: inline-block;
  padding: 2px var(--space-2);
  border-radius: 4px;
  font-size: 0.75rem;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.04em;
}
.action-items__badge--critical { background: var(--sev-critical); color: var(--sev-critical-fg); }
.action-items__badge--serious { background: var(--sev-serious); color: var(--sev-serious-fg); }
.action-items__badge--moderate { background: var(--sev-moderate); color: var(--sev-moderate-fg); }
.action-items__badge--minor { background: var(--sev-minor); color: var(--sev-minor-fg); }

/* Footer */
.report-footer {
  background: var(--surface);
  border: 1px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  margin-top: var(--space-5);
  box-shadow: var(--shadow);
}
.report-footer__heading { margin-top: 0; font-size: 1.125rem; }
.report-footer__meta { display: grid; gap: var(--space-2); margin: 0 0 var(--space-4); }
.report-footer__row { display: flex; gap: var(--space-3); }
.report-footer__row dt { font-weight: 600; min-width: 8rem; }
.report-footer__row dd { margin: 0; color: var(--ink-muted); }
.report-footer__identity { font-size: 0.8125rem; color: var(--ink-muted); margin: 0; padding-top: var(--space-3); border-top: 1px solid var(--border); }

/* Empty-state */
.empty-state {
  background: var(--surface);
  border: 1px solid var(--border);
  border-radius: var(--radius);
  padding: var(--space-5);
  text-align: center;
  margin-bottom: var(--space-5);
}
.empty-state__icon { font-size: 2.5rem; margin-bottom: var(--space-2); }

/* Print */
@media print {
  html, body { background: #ffffff; }
  main { max-width: none; padding: 0; }
  .skip-link { display: none; }
  .card, .report-header, .summary, .action-items, .report-footer { box-shadow: none; border-color: #000000; }
  details[open] > summary, details > * { display: block !important; }
  a { text-decoration: underline; color: #000000; }
}

/* Mobile */
@media (max-width: 480px) {
  main { padding: var(--space-4) var(--space-3); }
  h1 { font-size: 1.5rem; }
  h2 { font-size: 1.25rem; }
  .summary__score-value { font-size: 2.5rem; }
  .bar { grid-template-columns: 4.5rem 1fr 2rem; }
  .card__wcag { margin-left: 0; }
}
</style>
</head>
<body>
  <a class="skip-link" href="#main">Skip to main content</a>
  <main id="main">
    <header class="report-header" role="banner">
  <p class="report-eyebrow">Accessibility scan report</p>
  <h1 class="report-title">example.org</h1>
  <dl class="report-meta">
    <div class="report-meta__row">
      <dt>URL</dt>
      <dd><code>https://example.org/checkout</code></dd>
    </div>
    <div class="report-meta__row">
      <dt>Scanned</dt>
      <dd><time datetime="2026-05-19T16:05:52.101Z">2026-05-19T16:05:52.101Z</time></dd>
    </div>
    <div class="report-meta__row">
      <dt>Scanner</dt>
      <dd>ariada v0.1.0</dd>
    </div>
  </dl>
</header>
    <section class="summary" aria-labelledby="summary-heading">
  <h2 id="summary-heading">Summary</h2>
  <div class="summary__grid">
    <div class="summary__score" role="group" aria-labelledby="score-label">
      <p id="score-label" class="summary__score-label">Compliance score (heuristic)</p>
      <p class="summary__score-value summary__score-value--compliant" aria-live="polite">
        <span class="summary__score-number">100</span><span class="summary__score-unit">/100</span>
      </p>
      <p class="summary__score-band">Compliant</p>
      <p class="summary__score-caveat">Heuristic compliance indicator — see Module D for canonical signed score.</p>
    </div>
    <div class="summary__breakdown" role="group" aria-labelledby="breakdown-label">
      <p id="breakdown-label" class="summary__breakdown-label">Severity breakdown (0 findings)</p>
      <div class="bar bar--critical">
        <span class="bar__label">Critical</span>
        <div class="bar__track" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="0" aria-label="Critical: 0 of 0">
          <div class="bar__fill bar__fill--critical" style="width: 0%"></div>
        </div>
        <span class="bar__count">0</span>
      </div>
      <div class="bar bar--serious">
        <span class="bar__label">Serious</span>
        <div class="bar__track" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="0" aria-label="Serious: 0 of 0">
          <div class="bar__fill bar__fill--serious" style="width: 0%"></div>
        </div>
        <span class="bar__count">0</span>
      </div>
      <div class="bar bar--moderate">
        <span class="bar__label">Moderate</span>
        <div class="bar__track" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="0" aria-label="Moderate: 0 of 0">
          <div class="bar__fill bar__fill--moderate" style="width: 0%"></div>
        </div>
        <span class="bar__count">0</span>
      </div>
      <div class="bar bar--minor">
        <span class="bar__label">Minor</span>
        <div class="bar__track" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="0" aria-label="Minor: 0 of 0">
          <div class="bar__fill bar__fill--minor" style="width: 0%"></div>
        </div>
        <span class="bar__count">0</span>
      </div>
    </div>
  </div>
</section>
    <section class="empty-state" aria-labelledby="empty-heading">
    <p class="empty-state__icon" aria-hidden="true">✓</p>
    <h2 id="empty-heading">No automated violations detected</h2>
    <p>The automated scan did not surface any WCAG 2.2 AA failures on this URL. Manual review is still recommended for AAA criteria, cognitive accessibility, and assistive-technology compatibility.</p>
  </section>
    
    
    <footer class="report-footer" role="contentinfo">
  <div data-cert-block></div>
  <h2 class="report-footer__heading">Methodology</h2>
  <dl class="report-footer__meta">
    <div class="report-footer__row">
      <dt>Scanner</dt>
      <dd>ariada v0.1.0</dd>
    </div>
    <div class="report-footer__row">
      <dt>axe-core</dt>
      <dd>4.10.2</dd>
    </div>
    <div class="report-footer__row">
      <dt>WCAG</dt>
      <dd>2.2 Level AA</dd>
    </div>
    <div class="report-footer__row">
      <dt>EN 301 549</dt>
      <dd>v3.2.1</dd>
    </div>
    <div class="report-footer__row">
      <dt>Browser</dt>
      <dd>Chromium/124.0.6367.91</dd>
    </div>
    <div class="report-footer__row">
      <dt>Viewport</dt>
      <dd>1280x720</dd>
    </div>
  </dl>
  <p class="report-footer__identity">Maintained by Alekszandr Bricskin (Agonist Development AB, Sweden, org.nr 559452-5726). License: EUPL-1.2.</p>
</footer>
  </main>
</body>
</html>
"
`;
